app/stylesheets/main.css
/* Grid set up */
.grid-container{
        width: 100%;
        margin: 0 auto;
}

/* cleafix */
.row:before,
.row:after {
    content:"";
    display: table ;
    clear:both;
}

[class*='col-'] {
    float: left;
    min-height: 1px;
    width: 16.66%;
    /* put gutter styling here */
    /*padding: 12px;*/
    /*background-color: #FFDCDC;*/
}

.col-1{ width: 16.66%; }
.col-2{ width: 33.33%; }
.col-3{ width: 50%;    }
.col-4{ width: 66.66%; }
.col-5{ width: 83.33%; }
.col-6{ width: 100%;   }

/*.outline, .outline *{
  outline: 1px solid #F6A1A1;
}
*/
body {
  font-family: 'Open Sans', sans-serif;
  color: #272729;
}

/*Styling for individual sections : */
/*Colors:*/
/*white: #fdfcfc
blue: #22c1ee
black: #272729*/

.header-nav {
  background-color: #272729; /*#fdfcfc;*/
  color: #22c1ee;
  border-bottom: 1px solid #272729;
  margin: 0 0 15px 0;
}
#title {
  text-decoration: none;
  font-size: 2.5em;
  float: left;
  font-weight: bold;
  color: #22c1ee;
  /*margin: 0 25% 8px 0;*/
  padding: 0 0 0 15px;
}
#title:hover {
  color: #fdfcfc;
}

.header-nav ul {
  margin: 0;
  padding: 22px 15px 0 15px;
  /*overflow: hidden;*/
}
.header-nav li {
  float: right;
  /*padding: 100px, 10%, 0, 10%;*/
  display: inline-block;
  margin: 0 1% 0px 1%;
  font-weight: normal;
}

.header-nav a {
  font-size: 0.85em;
  text-decoration: none;
  color: #22c1ee;
}
.header-nav a:hover {
  color: #fdfcfc;
}


/*.header-bar h1 {
  font-size: 3.5em;
  font-weight: bold;
  color: #22c1ee;
  margin: 0 0 0 0;
}*/

/*In general, think it would be good to fix the width of the tab and adjust text to fit*/
.tab-bar {
  margin: 20px auto 6px 2%;
  font-size: 1.25em;
  font-weight: normal;
  padding: 0;
}

.tab-bar li {
  display: inline;
  margin: 0 1% 0px 1%;
  font-weight: normal;
}

.tab-bar a {
  padding: 3px 2% 0px 2%;
  font-weight: bold;
  font-size: 1em;
  border: 1px solid #22c1ee;
  border-top-left-radius: 10%;
  border-top-right-radius: 10%;
  text-decoration: none;
  color: #22c1ee;
}

.tab-bar a:hover {
  /*Enabling this causes the tab bar to jump a bit, fix and re-enable*/
  font-size: 1.1em;
  /*Resetting the padding to stop other tabs being pushed*/
  /*padding: 3px 1% 0px 1%;*/
  /*margin: 0 0 0 0;*/
  /*border: 4px solid black;*/
}

.tab-bar .active {
  font-size: 1.1em;
  background: #22c1ee;
  color: #fdfcfc;
  border-bottom: 6px solid #22c1ee;
  /*Resetting the padding to stop other tabs being pushed*/
  /*padding: 3px 1% 0px 1%;*/
}

.panel {
  border-top: 3px solid #22c1ee;
  border-radius: 10px;
  margin: 4px 3px 3px 3px;
  /*overflow-x: scroll ;*/
  /*width: 850px;*/
}

.panel h1 {
  font-size: 1.5em;
  font-style: bold;
  margin: 10px 0 10px 1%;
}

/*Styles for the Board*/
.board {
  width: 1425px;
  max-width: 1425px;
  display: inline-block;
  /*Put a scroll bar at the bottom*/
  overflow: scroll;
  /*display: inline;*/
  /*white-space: nowrap;*/
/*  overflow: auto;
  white-space: nowrap;
*/
}

#interested-col {
  display: inline;
  width: 225px;
  min-height: 500px;
  margin: 0 0 0 0;
  border: 1px solid #272729;
  border-radius: 10px;
  margin: 0 .5% 0 .5%;
  float: left;
  background-color: #f8f8f8;
}
#interested-col h3 {
  text-align: center;
  border-bottom: 2px solid #272729;
  margin: 10px 0 37px 0;
}
.board ul {
  list-style-type: none;
  padding: 0;
  min-height: 10px;
  /*position: relative;*/
}
.board li {
  font-size: 0.75em;
  width: 200px;
  border: 1px solid ;
  margin: 8px auto 8px auto;
  border-radius: 4px;
  padding: 3px;
  background-color: #fdfcfc;
  /*position: relative;*/
}
.board li:hover {
  font-size: 0.9em;
  background-color: #22c1ee;
  border-color: #22c1ee;
  color: #fdfcfc;
  padding: 2px;
}

/*To style the drag and drop*/
ul .dndDraggingSource {
    display: none;
}

.board .dndPlaceholder {
    display: block;
    background-color: #272729; /*Should be a blue shadow*/
    min-height: 25px;
}



/*#interested-col li:active {
  font-size: 0.9em;
  background-color: #22c1ee;
}*/
#board-form {
  /*how to force an element to the bottom of the container it is in? -- should it be at the bottom of the list container or just under the last card??*/
  font-size: 0.85em;
  text-align: center;
}

/*Highlight input when valid and invalid*/
/*.ng-invalid.ng-dirty {
  border-color: #fa787e;
}
.ng-valid.ng-dirty {
  border-color: #78fa89;
}*/

/*[class*='col-']*/
#personal-contact-col {
/*[id*='personal '] {*/
  display: inline;
  width: 450px;
  min-height: 400px;
  margin: 0 0 0 0;
  border: 1px solid #272729;
  border-radius: 10px;
  margin: 0 .5% 0 .5%;
  float: left;
  background-color: #f8f8f8;
  /*background-color: red;*/
}
#personal-contact-col h3 {
  width: 450px;
  text-align: center;
  border-bottom: 2px solid #272729;
  margin: 10px 0 0 0;
}

#in-progress {
  /*border: 1px solid red;*/
  width: 224px;
  min-height: 360px;
  float: left;
  border-right: 1px dashed #272729
  /*margin: 0 0 0 10%;*/
}

#in-progress h4 {
  font-size: 0.9em;
  color: #272729;
  text-align: center;
  margin: 0;
  border-bottom: 1px dashed #272729;
  /*background-color: pink;*/
}

/*#in-progress ul {
  list-style-type: none;
  padding: 0;
}*/

/*#in-progress li {
  font-size: 0.75em;
  width: 200px;
  border: 1px solid #272729;
  display: inline;
  margin: 8px auto 8px auto;
  border-radius: 4px;
  padding: 3px;
}*/


#done {
  /*border: 1px solid red;*/
  float: right;
  /*margin: 0 10% 0 0;*/
  width: 225px;
  min-height: 250px;
}

#done h4 {
  font-size: 0.9em;
  color: #272729;
  text-align: center;
  margin: 0;
  border-bottom: 1px dashed #272729;
}


#apply-col {
  display: inline;
  width: 450px;
  min-height: 300px;
  margin: 0 0 0 0;
  border: 1px solid #272729;
  border-radius: 10px;
  margin: 0 .5% 0 .5%;
  background-color: #f8f8f8;

  float: left;
}
#apply-col h3 {
  /*width: 225px;*/
  text-align: center;
  border-bottom: 2px solid #272729;
  margin: 10px 0 0 0;
}

#apply-col #in-progress {
  /*border: 1px solid red;*/
  /*width: 224px;*/
  min-height: 260px;
  /*float: left;*/
  /*border-right: 1px dashed #272729*/
  /*margin: 0 0 0 10%;*/
}


#interview-col {
  display: inline;
  width: 225px;
  min-height: 200px;
  margin: 0 0 0 0;
  border: 1px solid #272729;
  border-radius: 10px;
  margin: 0 .5% 0 .5%;
  float: left;
  background-color: #f8f8f8;
}
#interview-col h3 {
  width: 225px;
  text-align: center;
  border-bottom: 2px solid #272729;
  margin: 10px 0 37px 0;
}





.footer {
  font-size: .5em;
}





/*Media Rules below */

/*@media all and (max-width:800px) {
    .col-1{ width: 33.33%;   }
    .col-2{ width: 50%;      }
    .col-3{ width: 83.33%;   }
    .col-4{ width: 100%;     }
    .col-5{ width: 100%;     }
    .col-6{ width: 100%;     }

    .row .col-2:last-of-type {
        width: 100%;
    }

    .row .col-5 ~ .col-1 {
        width: 100%;
    }
}

@media all and (max-width:650px) {
    .col-1{ width: 50%;     }
    .col-2{ width: 100%;    }
    .col-3{ width: 100%;    }
    .col-4{ width: 100%;    }
    .col-5{ width: 100%;    }
    .col-6{ width: 100%;    }
}*/



/*.done-true {
  text-decoration: line-through;
  color: grey;
}

